# fastapi-ddd-example

./: .env.example  .envrc  .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
ADR/: 0001_initialize.md  0002_common&context.md
app/: __main__.py  config.py
app/common/: enum.py
app/core/: component.py  exc_handler.py  exception.py  fastapi.py  resolver.py  server.py  vo.py
app/domain/book/: post_entity.py
app/domain/subject/: subject_entity.py
app/domain/user/: __init__.py  user_entity.py
app/handler/: __init__.py
app/handler/rest/endpoint/: healthcheck.py
app/provider/context/: context.py
app/provider/log/: logging_configuer.py
app/provider/rdb/: __init__.py  orm_annotation.py  orm_registry.py  rdb_conn.py  transactional.py
app/trait/basic/: __init__.py  basic_entity.py  basic_repo.py
app/trait/explanable/: explanable_entity.py
app/trait/has_user/: __init__.py  has_user_entity.py
app/util/: annotation.py
docker/: Dockerfile.local
test/provider/: test_context.py
